// Copyright 2021 The Simlin Authors. All rights reserved.
// Use of this source code is governed by the Apache License,
// Version 2.0, that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1; // username
  string email = 2;
  string display_name = 3;
  string photo_url = 4;
  string provider = 5;
  google.protobuf.Timestamp created = 8;
  bool is_admin = 6;
  bool is_deactivated = 7;
  bool can_create_projects = 9;
}
